# podbox

./: .gitignore  .goreleaser.yaml  CONTRIBUTING.md  Cargo.toml  Dockerfile.dev  Dockerfile.goreleaser  Dockerfile.local  Justfile  README.md  mkdocs.yml
.cargo/: config.toml
.githooks/: pre-push
.github/workflows/: ci.yml  docs.yml  release.yml  test-arm64.yml
crates/podbox/: Cargo.toml  build.rs
crates/podbox-guest/: Cargo.toml
crates/podbox-guest/src/: daemon.rs  entry.rs  error.rs  lib.rs  main.rs  protocol.rs  socket.rs
crates/podbox-guest/src/interceptors/: clipboard.rs  host_exec.rs  mod.rs  notify.rs  xdg_open.rs
crates/podbox-guest/tests/: protocol_tests.rs
crates/podbox-protocol/: Cargo.toml
crates/podbox-protocol/src/: lib.rs
crates/podbox/src/: build.rs  cli.rs  compositor.rs  config.rs  diff.rs  editor.rs  env.rs  error.rs  export.rs  guest.rs  init_wizard.rs  labels.rs  lib.rs  lock.rs  main.rs  podman.rs  process.rs  profiles.rs  protocol.rs  quadlet_install.rs  socket_host.rs  systemd.rs  xdg.rs
crates/podbox/src/codegen/: containerfile.rs  distros.rs  quadlet.rs
crates/podbox/src/commands/: clone.rs  config.rs  context.rs  create.rs  definition.rs  export.rs  inspect.rs  lifecycle.rs  mod.rs  pull.rs  runtime.rs  serve.rs  stats.rs  translate.rs
crates/podbox/src/config/: defaults.rs  enums.rs  mod.rs  types.rs  validation.rs
crates/podbox/src/profiles/: cachy.toml  dev.toml  fedora.toml  gaming.toml
crates/podbox/src/socket_host/: handlers.rs
crates/podbox/src/wizard/: mod.rs  prompts.rs  shell.rs  summary.rs
crates/podbox/tests/: codegen_tests.rs  config_tests.rs  dry_run.rs  prebuilt_tests.rs
crates/podbox/tests/fixtures/: full.toml  no_wayland.toml  prebuilt.toml
crates/podbox/tests/snapshots/: codegen_tests__dbus_proxy_service.snap  codegen_tests__quadlet_socket.snap
crates/podmgr/: Cargo.toml  build.rs
crates/podmgr-guest/: Cargo.toml
crates/podmgr-guest/src/: daemon.rs  entry.rs  error.rs  lib.rs  main.rs  socket.rs
crates/podmgr-guest/src/interceptors/: clipboard.rs  mod.rs  notify.rs  xdg_open.rs
crates/podmgr-guest/tests/: protocol_tests.rs
crates/podmgr/src/: build.rs  cli.rs  config.rs  env.rs  error.rs  export.rs  labels.rs  lib.rs  main.rs  podman.rs  process.rs  profiles.rs  protocol.rs  quadlet_install.rs  socket_host.rs  xdg.rs
crates/podmgr/src/codegen/: containerfile.rs  mod.rs  quadlet.rs
crates/podmgr/src/profiles/: cachy.toml  fedora.toml  gaming.toml
crates/podmgr/tests/: codegen_tests.rs  config_tests.rs  dry_run.rs  prebuilt_tests.rs
crates/podmgr/tests/fixtures/: full.toml  minimal.toml  prebuilt.toml
docs/: architecture.md  baked-in-packages.md  config.md  dbus-proxy.md  export.md  getting-started.md  guest.md  index.md  protocol.md  quadlet.md  troubleshooting.md
docs/stylesheets/: catppuccin.css
images/_base/: podbox-entry.sh  podmgr-entry.sh
images/cachy/: Containerfile
images/dev/: Containerfile
images/fedora/: Containerfile
scripts/: bump-version.sh  gen-cover-svg.sh  gen-logo-svg.sh  install-online.sh  install.sh  uninstall.sh
