[workspace]
members  = ["crates/podbox", "crates/podbox-guest", "crates/podbox-protocol"]
resolver = "3"

[workspace.package]
edition      = "2024"
version      = "0.5.2"
license      = "MIT"
rust-version = "1.90"

[workspace.dependencies]
serde       = { version = "1.0", features = ["derive"] }
serde_json  = "1.0"
anyhow      = "1.0"
thiserror   = "2.0"
nix         = { version = "0.31.3", features = [
    "process", "signal", "fs", "poll", "user", "socket", "uio",
] }
clap            = { version = "4.5", features = ["derive"] }
clap_complete   = "4.5"
toml            = "0.8"
dirs            = "5.0"
which           = "6.0"
indexmap        = "2.14"
notify-rust     = "4.0"
dialoguer       = { version = "0.11", features = ["fuzzy-select"] }
sha2            = "0.10"
hex             = "0.4"
url             = "2.5"
toml_edit       = "0.22"
podbox-protocol = { path = "crates/podbox-protocol" }

# Testing
assert_cmd = "2.0"
insta      = { version = "1.48", features = ["json"] }
predicates = "3.1"
tempfile   = "3.27"

[profile.release]
opt-level = "z"
strip     = true
lto       = true
panic     = "abort"

[workspace.lints.rust]
unsafe_code = "allow"

[workspace.lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"

# New lints in Rust 1.95 — noisy, opt out individually
uninlined_format_args      = "allow"
collapsible_if             = "allow"
assigning_clones           = "allow"
redundant_closure_for_method_calls = "allow"
doc_markdown               = "allow"
items_after_statements     = "allow"
needless_pass_by_value     = "allow"
match_same_arms            = "allow"
map_unwrap_or              = "allow"
single_match_else          = "allow"
if_not_else                = "allow"
unnecessary_wraps          = "allow"
redundant_guards           = "allow"
fn_params_excessive_bools  = "allow"
too_many_lines             = "allow"
wildcard_in_or_patterns    = "allow"
manual_string_new          = "allow"
semicolon_if_nothing_returned = "allow"
match_wildcard_for_single_variants = "allow"
trivially_copy_pass_by_ref = "allow"
manual_let_else            = "allow"
struct_excessive_bools     = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal         = "allow"
unnecessary_trailing_comma = "allow"
used_underscore_binding    = "allow"
ref_option                 = "allow"
implicit_hasher            = "allow"
elidable_lifetime_names    = "allow"
