[package]
name = "podbox-guest"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "podbox_guest"
path = "src/lib.rs"

[[bin]]
name = "podbox-guest"
path = "src/main.rs"

[dependencies]
serde           = { workspace = true }
serde_json      = { workspace = true }
anyhow          = { workspace = true }
nix             = { workspace = true }
thiserror       = { workspace = true }
fd-lock         = { workspace = true }
podbox-protocol = { workspace = true }

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
must_use_candidate      = "allow"
