[package]
name = "podbox"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "podbox"
path = "src/lib.rs"

[[bin]]
name = "podbox"
path = "src/main.rs"

[dependencies]
clap            = { workspace = true }
clap_complete   = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
toml            = { workspace = true }
anyhow          = { workspace = true }
thiserror       = { workspace = true }
dirs            = { workspace = true }
which           = { workspace = true }
indexmap        = { workspace = true }
notify-rust     = { workspace = true }
nix             = { workspace = true }
dialoguer       = { workspace = true }
sha2            = { workspace = true }
hex             = { workspace = true }
url             = { workspace = true }
toml_edit       = { workspace = true }
shell-words     = { workspace = true }
owo-colors      = { workspace = true }
podbox-protocol = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
insta      = { workspace = true }
predicates = { workspace = true }
tempfile   = { workspace = true }

[lints]
workspace = true
