[package]
name    = "podmgr-guest"
version.workspace = true
edition = "2021"

[lib]
name = "podmgr_guest"
path = "src/lib.rs"

[[bin]]
name = "podmgr-guest"
path = "src/main.rs"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
nix        = { workspace = true }
thiserror  = { workspace = true }
