[package]
name    = "podmgr"
version.workspace = true
edition = "2021"

[lib]
name = "podmgr"
path = "src/lib.rs"

[[bin]]
name = "podmgr"
path = "src/main.rs"

[dependencies]
clap           = { version = "4.5", features = ["derive"] }
clap_complete  = "4.5"
serde          = { workspace = true }
serde_json     = { workspace = true }
toml           = "0.8"
anyhow         = { workspace = true }
thiserror      = { workspace = true }
dirs           = "5.0"
which          = "6.0"
indexmap       = "2.0"
notify-rust    = "4.0"
nix            = { workspace = true }
dialoguer      = { version = "0.11", features = ["fuzzy-select"] }
sha2           = "0.10"
hex            = "0.4"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
